# astar_path_planning

./: CMakeLists.txt  README.md
include/: A_star.h  Cell.h  Grid.h  utils.h
src/: A_star.cpp  Cell.cpp  Grid.cpp  POINTER_NOT_WORKING_A_star.cpp  main.cpp
tests/: node_struct_test  node_struct_test.cpp  node_struct_test2  node_struct_test2.cpp  sdl_test1  sdl_test1.cpp  sdl_test2  sdl_test2.cpp
